# driver-distraction-detection

./: .flaskenv  .gitattributes  README.md  appline.py  database.py  global_label.py  http_response.py  id.py  model.py  outcome.db  pyproject.toml  user.db
static/js/: app.js  init.js  signin.js  validate.js
static/js/vendors/: AuthService.js  HttpService.js  Notification.js
static/style/: app.css  clear.css  index.css  signin.css
templates/: app.html  index.html  signin.html
