[tool.poetry]
name = "driver-distraction-detection"
version = "1.0.0"
description = ""
authors = ["Steven <106362981+stevenleep@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.82"
python-dotenv = "^1.0.1"
opencv-python-headless = "^4.10.0.82"
flask = "^3.0.3"
flask-jwt-extended = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
